--- a/app/views/previousRecommendations.scala.html
+++ b/app/views/previousRecommendations.scala.html
@@ -1,4 +1,11 @@
-@(user: MovieUser)
-@main("Your Likes", user) {
+@(user: MovieUser)(likeActors: List[UserFavoriteActor])(likeMovies: List[UserFavoriteMovie])
 
+@main("Your Likes", user) {
+  <p>Click on an Actor below to view more information:
+<ul>
+  @for(name <- likeActors) {
+    <li><a href="@routes.Application.viewActor(name)">@name</a></li>
+  }
+</ul>
+  </p>
 }
