Fixes runtime errors when seeing previous recommendations

--- a/app/views/previousRecommendations.scala.html
+++ b/app/views/previousRecommendations.scala.html
@@ -4,7 +4,7 @@
   <p>Click on an Actor below to view more information:
 <ul>
   @for(name <- likeActors) {
-    <li><a href="@routes.Application.viewActor(name)">@name</a></li>
+    <li><a href="@routes.Application.actorDetail()">@name</a></li>
   }
 </ul>
   </p>
