Adds working movie recommendations

--- a/app/views/movieRecommendations.scala.html
+++ b/app/views/movieRecommendations.scala.html
@@ -1,5 +1,11 @@
-@(user: MovieUser)
+@(user: MovieUser)(movies: List[Movie])
 
 @main("Movies You Might Like", user) {
-    Here's a list of movies that would be pretty cool for you.
+    Here's a list of movies that you might like
+
+    @for(movie <- movies) {
+        <img src="https://image.tmdb.org/t/p/w500@movie.poster_path" alt="Actor Picture" style="width:200px;">
+    }
+
+
 }
