Adds our actor-choosing method. Method of keeping and updating favorites.

--- a/app/views/actorDetail.scala.html
+++ b/app/views/actorDetail.scala.html
@@ -2,4 +2,7 @@
 
 @main(actor.name, user) {
     <img src="https://image.tmdb.org/t/p/w500@actor.imagePath" alt="Actor Picture" style="width:300px;">
+
+    <a href="@routes.Application.actorBackToFavorites(actor.id)"> <button>Delete Actor</button></a>
+    <a href="@routes.Application.actorBackToFavorites(-1)"> <button>Back</button></a>
 }
