fix CSS lagging

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -2,11 +2,11 @@ body {
   background-image: url("/public/images/background.png");
   background-size: cover;
   //background-repeat: no-repeat;
-  background-position: center center;
+  //background-position: center center;
 }
 
 h1 {
-  color: rgba(51,59,20,1);
+  color: #FFFFFF;
 }
 
 #button {
