--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div class="center">
-            <a href="@routes.Application.index">Home Page</a>
+            @*<a href="@routes.Application.index">Home Page</a>*@
 
             @helper.form(routes.Application.authenticate) {
                 <h1>Sign in</h1>
