Fixes out of bounds exception

--- a/app/views/discoverNew.scala.html
+++ b/app/views/discoverNew.scala.html
@@ -1,10 +1,12 @@
 @(user: MovieUser)(actors: List[Actor])
 
 @main("Discover", user) {
+    Click on the actor who you prefer
     @for(actor <- actors) {
             <a href="@routes.Application.continueDiscovering(actor.id)">
                 <img src="https://image.tmdb.org/t/p/w500@actor.imagePath" alt="Actor Picture" style="width:150px;">
             </a>
+
 
     }
     <a href="@routes.Application.continueDiscovering(-1)"> Neither! </a>
