--- a/app/views/discoverNew.scala.html
+++ b/app/views/discoverNew.scala.html
@@ -1,11 +1,13 @@
 @(user: MovieUser)(actors: List[Actor])
 
-@main("Discover", user) {
-    @for(actor <- actors) {
+<div class="center">
+    @main("Discover new Movies", user) {
+        @for(actor <- actors) {
             <a href="@routes.Application.continueDiscovering(actor.id)">
-                <img src="https://image.tmdb.org/t/p/w500@actor.imagePath" alt="Actor Picture" style="width:150px;">
+                <img id="actor-image" src="https://image.tmdb.org/t/p/w500@actor.imagePath" alt="Actor Picture">
             </a>
-
+        }
+        <br/>
+        <a href="@routes.Application.continueDiscovering(-1)"> Neither! </a>
     }
-    <a href="@routes.Application.continueDiscovering(-1)"> Neither! </a>
-}
+</div>
