--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,6 +1,8 @@
 @(user: MovieUser)
 
-    @main("Welcome to MovieSpin!", user) {
-        <a href="@routes.Application.previousRecommendations"> <button>See previous recommendations</button></a>
-        <a href="@routes.Application.discoverNew"> <button>Discover new movies</button></a>
-    }
+<div class="center">
+@main("Welcome to MovieSpin", user) {
+    <a href="@routes.Application.discoverNew"> <button id="index-button-left">Discover new movies</button></a>
+    <a href="@routes.Application.previousRecommendations"> <button id="index-button-right">See previous recommendations</button></a>
+}
+</div>
