--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -11,7 +11,7 @@
             @*<a href="@routes.Application.index">Home Page</a>*@
 
             @helper.form(routes.Application.authenticate) {
-                <h1>Sign in</h1>
+                <h1>Sign in to MovieSpin</h1>
 
                 <div class="center">
                     <input class="login-field" type="email" name="email" placeholder="Email" value="@form("email").value">
@@ -28,17 +28,17 @@
             }
 
             <a href="@routes.Application.createUser"> <button id="button">New User</button></a>
-        </div>
         @if(flash.contains("success")) {
-            <p class="success">
+            <p class="flash success">
             @flash.get("success")
             </p>
         }
 
         @if(form.hasGlobalErrors) {
-            <p class="error">
+            <p class="flash error">
             @form.globalError.message
             </p>
         }
+        </div>
     </body>
 </html>
