--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -8,22 +8,23 @@
         <title>MovieSpin</title>
 
         <meta http-equiv="Content-type" content="text/html;charset=UTF-8"/>
+
+        <link rel="stylesheet" href="@routes.Assets.at("stylesheets/main.css")">
+
     </head>
 
     <body>
         <header>
-            <a href="@routes.Application.index" id="logo">Movie Spin</a>
+            <a href="@routes.Application.index" id="logo">Home |</a>
+            <a href="@routes.Application.logout()">Logout</a>
+            <br/>
             <dl id="user">
-                <dt>@user.name</dt>
-                <dd>
-                    <a href="@routes.Application.logout()">Logout</a>
-                </dd>
+                <dt>Hello, @user.name.</dt>
             </dl>
         </header>
 
         <h2 id="heading">@heading</h2>
         <div id="content">@content</div>
 
-        <hr/>
     </body>
 </html>
