--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -26,6 +26,10 @@ h2 {
   font-size: 40px;
 }
 
+ul {
+  list-style: none;
+}
+
 button {
   background-image: linear-gradient(#91dd70, #55ae2e);
   margin: 0 auto;
@@ -100,4 +104,8 @@ input {
 
 #neither {
   font-size: 30px;
+}
+
+#actor-profile-image {
+  width: 200px;
 }
