--- a/app/views/previousRecommendations.scala.html
+++ b/app/views/previousRecommendations.scala.html
@@ -3,7 +3,7 @@
 <div class="center">
     @main("Your Likes", user) {
 
-        Click on a Movie below to view more information:
+        <h3>Click on a Movie below to view more information:</h3>
         <br/>
         <br/>
         <br/>
@@ -19,8 +19,7 @@
         <br/>
         <br/>
         <br/>
-        Click on an Actor below to view more information:
-        <br/>
+        <h3>Click on an Actor below to view more information:</h3>
         <br/>
         <br/>
         @for(actor <- likeActors) {
