--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -8,6 +8,7 @@
         <title>MovieSpin</title>
 
         <meta http-equiv="Content-type" content="text/html;charset=UTF-8"/>
+        <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
 
         <link rel="stylesheet" href="@routes.Assets.at("stylesheets/main.css")">
 
