--- a/app/views/movieDetail.scala.html
+++ b/app/views/movieDetail.scala.html
@@ -7,7 +7,8 @@
         <br/>
         <br/>
         <br/>
-        <a href="@routes.Application.movieBackToFavorites(movie.id)"> <button id="like-button-left">Delete Movie</button></a>
+        <a href="@routes.Application.movieBackToFavorites(movie.id)"> <button id="like-button-left">
+            Delete Movie</button></a>
         <a href="@routes.Application.movieBackToFavorites(-1)"> <button id="like-button-right">Back</button></a>
     }
 </div>
