--- a/app/views/actorDetail.scala.html
+++ b/app/views/actorDetail.scala.html
@@ -6,7 +6,8 @@
         <br/>
         <p>Popularity rating: @actor.popularity</p>
         <br/>
-        <a href="@routes.Application.actorBackToFavorites(actor.id)"> <button id="like-button-left">Delete Actor</button></a>
+        <a href="@routes.Application.actorBackToFavorites(actor.id)"> <button id="like-button-left">
+            Delete Actor</button></a>
         <a href="@routes.Application.actorBackToFavorites(-1)"> <button id="like-button-right">Back</button></a>
     }
 </div>
